--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "name": "websocketsgame",
   "version": "1.0.0",
-  "description": "Game with websockets",
-  "main": "index.html",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "dev": "lite-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/andresqb198/WebsocketsGame.git"
   },
-  "author": "Andres Quintero - Hernan Aguilar",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/andresqb198/WebsocketsGame/issues"
   },
   "homepage": "https://github.com/andresqb198/WebsocketsGame#readme",
-  "devDependencies": {
-    "lite-server": "^2.5.4"
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongojs": "^3.1.0",
+    "socket.io": "^2.3.0"
   }
 }
